[package]
name = "js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# js-sys = "0.3.65"
wasm-bindgen = "0.2.87"  
# [dependencies.web-sys]
# version = "0.3.64"
# features = [
#   "Window","console"
# ]
